5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1888_1598.log
== TEST (2019-07-09 16:04:52) 
-- CODE:
from numpy import *

vet = array(eval(input("custo dos itens:)))

for i in range (vet):
	if (v[i] > 80):
		v = v[i] - 5
print(round(v, 2))
-- ERROR:
File "XXXX", line 3
    vet = array(eval(input("custo dos itens:)))
                                              ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:05:14) 
-- CODE:
from numpy import *

vet = array(eval(input("custo dos itens:")))

for i in range (vet):
	if (v[i] > 80):
		v = v[i] - 5
print(round(v, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:06:09) 
-- CODE:
from numpy import *

vet = array(eval(input("custo dos itens:")))

for i in range (vet):
	if (v[i] > 80):
		v = v[i] - 5
x = sum(v)
print(round(v, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:11:07) 
-- CODE:
from numpy import *

vet = array(eval(input("custo dos itens:")))

for i in range(vet):
	if (v[i] > 80):
		v = v[i] - 5
x = sum(v)
print(round(v, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:11:43) 
-- CODE:
from numpy import *

vet = array(eval(input("custo dos itens:")))

for i in range(vet):
	if (v[i] > 80):
		v[i] = v[i] - 5
x = sum(v[i])
print(round(v[i], 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:12:30) 
-- CODE:
from numpy import *

vet = array(eval(input("custo dos itens:")))

for i in range(vet):
	if (vet[i] > 80):
			vet = vet[i] - 5
x = sum(vet)
print(round(vet, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:12:50) 
-- CODE:
from numpy import *

vet = array(eval(input("custo dos itens:")))

for i in range(vet):
	if (vet[i] > 80):
			vet = vet[i] - 5
x = sum(vet)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:13:09) 
-- CODE:
from numpy import *
from numpy.linalg import*

vet = array(eval(input("custo dos itens:")))

for i in range(vet):
	if (vet[i] > 80):
			vet = vet[i] - 5
x = sum(vet)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:13:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("custo dos itens:")))

for i in range(vet):
	if (vet[i] > 80):
			vet = vet[i] - 5
x = sum(vet)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:15:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("custo dos itens:")))

print (vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:15:29) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("custo dos itens:")))

print (sum(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:16:45) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("custo dos itens:")))

for i in range(vet):
	if(vet[i] > 80):
		vet[i]= vet[i] - 5

print (sum(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:17:52) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("custo dos itens:")))

for i in range(vet):
	if(vet[i] > 80):
		vet[i]= (vet[i]) - 5

	print (sum(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:26:07) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("custo dos itens:")))

for i in range size(vet):
	if(vet[i] > 80):
		vet[i]= (vet[i] - 5)

print (sum(vet))
-- ERROR:
File "XXXX", line 6
    for i in range size(vet):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:26:19) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("custo dos itens:")))

for i in range (size(vet)):
	if(vet[i] > 80):
		vet[i]= (vet[i] - 5)

print (sum(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:26:27) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("custo dos itens:")))

for i in range (size(vet)):
	if(vet[i] > 80):
		vet[i]= (vet[i] - 5)

print (sum(vet))
-- EXECUTION TIME:
1.02678
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52000000000001
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:26:56) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("custo dos itens:")))

for i in range (size(vet)):
	if(vet[i] > 80):
		vet[i]= (vet[i] - 5)

print (sum(round(vet, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:27:27) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("custo dos itens:")))

for i in range (size(vet)):
	if(vet[i] > 80):
		vet[i]= (vet[i] - 5)
X=sum(vet)
print(round(X, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:27:35) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("custo dos itens:")))

for i in range (size(vet)):
	if(vet[i] > 80):
		vet[i]= (vet[i] - 5)
X=sum(vet)
print(round(X, 2))
-- EXECUTION TIME:
0.923665
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
